--- a/bio.html
+++ b/bio.html
@@ -69,42 +69,54 @@
 
 		<div id="copy" style="padding:20px; width:630px">
 
-	    <h1>Education</h1></td>
+	    <h1>Biography:</h1></td>
  
 		<div id="copy" style="padding:20px">
-		<table width=60%>
-      		  <tr>
-		     <td width="30%"><p>2018-present</p></td>
+		<table width=80%>
+   		  <tr>
+       		     <td width="30%"><p>2020-present</p></td>
       		     <td width="70%" style="padding:5px">
-		  	<p>University of Southern California</p>
-            <p> Department of Electrical Engineering</p>
+		  	<p><a href="https://www.ucr.edu/">University of California, Riverside</a></p>
+			<p><a href="https://www.ece.ucr.edu/">Department of Electrical and Computer Engineering</a> </p>
+			<p>Assistant Professor</p>
+		     </td>
+		  </tr>
+		  
+      		  <tr>
+		     <td width="30%"><p>2018-2020</p></td>
+      		     <td width="70%" style="padding:5px">
+		  	<p><a href="https://www.usc.edu/">University of Southern California</a></p>
+            <p> <a href="https://minghsiehee.usc.edu/"> Department of Electrical and Computer Engineering</a></p>
             <p>Postdoctoral Scholar </p></td> 
 		  </tr>
    		  <tr>
        		     <td width="30%"><p>2012-2017</p></td>
       		     <td width="70%" style="padding:5px">
-		  	<p>The Pennsylvania State University</p>
-			<p>Department of Electrical Engineering </p>
-			<p>Ph.D</p>
+		  	<p><a href="https://www.psu.edu">The Pennsylvania State University</a></p>
+			<p><a href="https://www.eecs.psu.edu">Department of Electrical Engineering</a> </p>
+			<p>Ph.D </p>
+			<p> Thesis: Information Transmission in Networks with Social and Semantic Constraints</p>
 		     </td>
 		  </tr>
       		  <tr>
 		     <td width="30%"><p>2010-2011</p></td>
       		     <td width="70%" style="padding:5px">
-		  	<p>The Pennsylvania State University</p>
-            <p>Department of Electrical Engineering </p>
-            <p>M.Sc</p></td>
+		  	<p><a href="https://www.psu.edu">The Pennsylvania State University</a></p>
+            <p><a href="https://www.eecs.psu.edu">Department of Electrical Engineering</a> </p>
+            <p>M.Sc </p>
+            <p> Thesis: Interference Management in Femtocell Networks</p></td>
      		  </tr>
       		  <tr>
 		     <td width="30%"><p>2005-2009</p></td>
       		     <td width="70%" style="padding:5px">
-		  	<p>Middle East Technical University</p>
-            <p>Department of Electrical and Electronics Engineering</p>
-            <p>B.S. </p></td> 
+		  	<p><a href="https://www.metu.edu.tr/">Middle East Technical University</a></p>
+            <p><a href="https://eee.metu.edu.tr/">Department of Electrical and Electronics Engineering</a></p>
+            <p>B.Sc. </p></td> 
 		  </tr>
 		</table>
 		</div>
 
+<!-- 
 		<h1>Graduate Level Courses        </h1>
 		<ul>
 		  <li> <p>EE560: Random Variables &amp; Stochastic Processes</p>
@@ -123,6 +135,7 @@
         
 
         <li>
+ -->
 </ul>
 
 		<!-- <h1>Awards and Honors</h1> -->
