--- a/bio.html
+++ b/bio.html
@@ -70,7 +70,12 @@
 		<div id="copy" style="padding:20px; width:630px">
 
 	    <h1>Biography:</h1></td>
- 
+
+		<p style="text-align:justify"> I received my PhD from the <a href="https://www.eecs.psu.edu">Department of Electrical Engineering</a> at the <a href="https://www.psu.edu">Pennsylvania State University</a>, where I was working with <a href="http://labs.ee.psu.edu/faculty/yener/">Prof. Aylin Yener</a>. 
+<!-- 		I was a member of the <a href="http://wcan.ee.psu.edu">Wireless Communications and Networking Laboratory (WCAN)</a>. --> 
+After my PhD, I was a postdoctoral scholar in the <a href="https://minghsiehee.usc.edu/"> Ming Hsieh Department of Electrical and Computer Engineering </a> at <a href="https://www.usc.edu/">University of Southern California</a>, where I was working jointly with <a href="http://www-bcf.usc.edu/~avestime/Home.html">Prof. Salman Avestimehr</a> and <a href="https://viterbi.usc.edu/directory/faculty/Ortega/Antonio">Prof. Antonio Ortega</a>.
+		</p> 
+		 
 		<div id="copy" style="padding:20px">
 		<table width=80%>
    		  <tr>
