--- a/bio.html
+++ b/bio.html
@@ -81,8 +81,8 @@ After my PhD, I was a postdoctoral scholar in the <a href="https://minghsiehee.u
    		  <tr>
        		     <td width="30%"><p>2020-present</p></td>
       		     <td width="70%" style="padding:5px">
-		  	<p><a href="https://www.ucr.edu/">University of California, Riverside</a></p>
-			<p><a href="https://www.ece.ucr.edu/">Department of Electrical and Computer Engineering</a> </p>
+		  	<p>University of California, Riverside</p>
+			<p>Department of Electrical and Computer Engineering</p>
 			<p>Assistant Professor</p>
 		     </td>
 		  </tr>
@@ -90,15 +90,15 @@ After my PhD, I was a postdoctoral scholar in the <a href="https://minghsiehee.u
       		  <tr>
 		     <td width="30%"><p>2018-2020</p></td>
       		     <td width="70%" style="padding:5px">
-		  	<p><a href="https://www.usc.edu/">University of Southern California</a></p>
-            <p> <a href="https://minghsiehee.usc.edu/"> Department of Electrical and Computer Engineering</a></p>
+		  	<p>University of Southern California</p>
+            <p> Department of Electrical and Computer Engineering</p>
             <p>Postdoctoral Scholar </p></td> 
 		  </tr>
    		  <tr>
        		     <td width="30%"><p>2012-2017</p></td>
       		     <td width="70%" style="padding:5px">
-		  	<p><a href="https://www.psu.edu">The Pennsylvania State University</a></p>
-			<p><a href="https://www.eecs.psu.edu">Department of Electrical Engineering</a> </p>
+		  	<p>The Pennsylvania State University</p>
+			<p>Department of Electrical Engineering </p>
 			<p>Ph.D </p>
 			<p> Thesis: Information Transmission in Networks with Social and Semantic Constraints</p>
 		     </td>
@@ -106,16 +106,16 @@ After my PhD, I was a postdoctoral scholar in the <a href="https://minghsiehee.u
       		  <tr>
 		     <td width="30%"><p>2010-2011</p></td>
       		     <td width="70%" style="padding:5px">
-		  	<p><a href="https://www.psu.edu">The Pennsylvania State University</a></p>
-            <p><a href="https://www.eecs.psu.edu">Department of Electrical Engineering</a> </p>
+		  	<p>The Pennsylvania State University</p>
+            <p>Department of Electrical Engineering </p>
             <p>M.Sc </p>
             <p> Thesis: Interference Management in Femtocell Networks</p></td>
      		  </tr>
       		  <tr>
 		     <td width="30%"><p>2005-2009</p></td>
       		     <td width="70%" style="padding:5px">
-		  	<p><a href="https://www.metu.edu.tr/">Middle East Technical University</a></p>
-            <p><a href="https://eee.metu.edu.tr/">Department of Electrical and Electronics Engineering</a></p>
+		  	<p>Middle East Technical University</p>
+            <p>Department of Electrical and Electronics Engineering</p>
             <p>B.Sc. </p></td> 
 		  </tr>
 		</table>
