--- a/bio.html
+++ b/bio.html
@@ -56,7 +56,7 @@
 					<li><a href="bio.html"style="color: MidnightBlue">Bio</a></li>
 					<li><a href="research.html"style="color: MidnightBlue">Research</a></li>
 					<li><a href="publications.html"style="color: MidnightBlue">Publications</a></li>					
-					<li><a href="personal.html"style="color: MidnightBlue">Personal</a></li>
+					<li><a href="teaching.html"style="color: MidnightBlue">Teaching</a></li>
 				</ul>
 			</div> <!-- secondaryNavigation -->		
 	</div> <!-- firstColumn -->
