--- a/bio.html
+++ b/bio.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="https://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <title>Basak Guler</title>
@@ -7,7 +6,6 @@
 <link href="styles/generic.css" rel="stylesheet" type="text/css" />
 <link href="styles/electrical.css" rel="stylesheet" type="text/css" />
 
-<script src="js/ga.js"></script>
 
 </head>
 
@@ -71,9 +69,9 @@
 
 	    <h1>Biography:</h1></td>
 
-		<p style="text-align:justify"> I received my PhD from the <a href="https://www.eecs.psu.edu">Department of Electrical Engineering</a> at the <a href="https://www.psu.edu">Pennsylvania State University</a>, where I was working with <a href="http://labs.ee.psu.edu/faculty/yener/">Prof. Aylin Yener</a>. 
+		<p style="text-align:justify"> I received my PhD from the <a href="https://www.eecs.psu.edu">Department of Electrical Engineering</a> at the <a href="https://www.psu.edu">Pennsylvania State University</a>, where I was working with <a href="https://u.osu.edu/yener.5/">Prof. Aylin Yener</a>. 
 <!-- 		I was a member of the <a href="http://wcan.ee.psu.edu">Wireless Communications and Networking Laboratory (WCAN)</a>. --> 
-After my PhD, I was a postdoctoral scholar in the <a href="https://minghsiehee.usc.edu/"> Ming Hsieh Department of Electrical and Computer Engineering </a> at <a href="https://www.usc.edu/">University of Southern California</a>, where I was working jointly with <a href="http://www-bcf.usc.edu/~avestime/Home.html">Prof. Salman Avestimehr</a> and <a href="https://viterbi.usc.edu/directory/faculty/Ortega/Antonio">Prof. Antonio Ortega</a>.
+After my PhD, I was a postdoctoral scholar in the <a href="https://minghsiehee.usc.edu/"> Ming Hsieh Department of Electrical and Computer Engineering </a> at <a href="https://www.usc.edu/">University of Southern California</a>, where I was working jointly with <a href="https://www.avestimehr.com/">Prof. Salman Avestimehr</a> and <a href="https://viterbi.usc.edu/directory/faculty/Ortega/Antonio">Prof. Antonio Ortega</a>.
 		</p> 
 		 
 		<div id="copy" style="padding:20px">
