--- a/bio.html
+++ b/bio.html
@@ -2,9 +2,9 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <title>Basak Guler</title>
-<link href="styles/reset.css" rel="stylesheet" type="text/css" />
-<link href="styles/generic.css" rel="stylesheet" type="text/css" />
-<link href="styles/electrical.css" rel="stylesheet" type="text/css" />
+<link href="https://basakguler.github.io/styles/reset.css" rel="stylesheet" type="text/css" />
+<link href="https://basakguler.github.io/styles/generic.css" rel="stylesheet" type="text/css" />
+<link href="https://basakguler.github.io/styles/electrical.css" rel="stylesheet" type="text/css" />
 
 
 </head>
@@ -50,11 +50,11 @@
 
 			<div id="secondaryNavigation">
 				<ul> 
-					<li><a href="index.html"style="color: MidnightBlue">Home</a></li>
-					<li><a href="bio.html"style="color: MidnightBlue">Bio</a></li>
-					<li><a href="research.html"style="color: MidnightBlue">Research</a></li>
-					<li><a href="publications.html"style="color: MidnightBlue">Publications</a></li>					
-					<li><a href="teaching.html"style="color: MidnightBlue">Teaching</a></li>
+					<li><a href="https://basakguler.github.io/index.html"style="color: MidnightBlue">Home</a></li>
+					<li><a href="https://basakguler.github.io/bio.html"style="color: MidnightBlue">Bio</a></li>
+					<li><a href="https://basakguler.github.io/research.html"style="color: MidnightBlue">Research</a></li>
+					<li><a href="https://basakguler.github.io/publications.html"style="color: MidnightBlue">Publications</a></li>					
+					<li><a href="https://basakguler.github.io/teaching.html"style="color: MidnightBlue">Teaching</a></li>
 				</ul>
 			</div> <!-- secondaryNavigation -->		
 	</div> <!-- firstColumn -->
