--- a/bio.html
+++ b/bio.html
@@ -52,9 +52,11 @@
 				<ul> 
 					<li><a href="https://basakguler.github.io/index.html"style="color: MidnightBlue">Home</a></li>
 					<li><a href="https://basakguler.github.io/bio.html"style="color: MidnightBlue">Bio</a></li>
+					<li><a href="https://basakguler.github.io/group.html"style="color: MidnightBlue">Group</a></li>	
 					<li><a href="https://basakguler.github.io/research.html"style="color: MidnightBlue">Research</a></li>
-					<li><a href="https://basakguler.github.io/publications.html"style="color: MidnightBlue">Publications</a></li>					
+					<li><a href="https://basakguler.github.io/publications.html"style="color: MidnightBlue">Publications</a></li>				
 					<li><a href="https://basakguler.github.io/teaching.html"style="color: MidnightBlue">Teaching</a></li>
+					<li><a href="https://basakguler.github.io/outreach.html"style="color: MidnightBlue">Outreach</a></li>
 				</ul>
 			</div> <!-- secondaryNavigation -->		
 	</div> <!-- firstColumn -->
