--- a/bio.html
+++ b/bio.html
@@ -98,7 +98,7 @@ After my PhD, I was a postdoctoral scholar in the <a href="https://minghsiehee.u
        		     <td width="30%"><p>2012-2017</p></td>
       		     <td width="70%" style="padding:5px">
 		  	<p>The Pennsylvania State University</p>
-			<p>Department of Electrical Engineering </p>
+			<p>School of Electrical Engineering and Computer Science </p>
 			<p>Ph.D </p>
 			<p> Thesis: Information Transmission in Networks with Social and Semantic Constraints</p>
 		     </td>
@@ -107,7 +107,7 @@ After my PhD, I was a postdoctoral scholar in the <a href="https://minghsiehee.u
 		     <td width="30%"><p>2010-2011</p></td>
       		     <td width="70%" style="padding:5px">
 		  	<p>The Pennsylvania State University</p>
-            <p>Department of Electrical Engineering </p>
+            <p>School of Electrical Engineering and Computer Science </p>
             <p>M.Sc </p>
             <p> Thesis: Interference Management in Femtocell Networks</p></td>
      		  </tr>
